# profilesx

./: Makefile  Makefile.am  configure.ac
control_panel_plugin/: Makefile.am  profilesx-control-panel-plugin.c  profilesx-profile-data.c  profilesx-profile-data.h  profilesx-profile-editor-dialog.c  profilesx-profile-editor-dialog.h  profilesx-profile-waitdialog.c  profilesx-profile-waitdialog.h  profilesx-util.c
control_panel_plugin_src/: Makefile  profilesx-control-panel-plugin.c  profilesx-control-panel-plugin.h  profilesx-profile-data.h  profilesx-profile-waitdialog.c  profilesx-util  profilesx-util.c
data/: profilesx-cp-plugin.desktop  profilesx-sp-plugin.desktop  profilesx.sudoers
debian/: README  README.Debian  changelog  changelog.dchX  control  copyright  postinst  profilesx.tarlist  rules
status_panel_plugin/: Makefile.am  profilesx-status-panel-plugin.c  profilesx-status-panel-plugin.h
status_panel_plugin_src/: Makefile  profile_changed_marshal.list
