SUBDIRS = control_panel_plugin  status_panel_plugin

hildoncontrolpaneldesktopentry_DATA = data/profilesx-cp-plugin.desktop
hildondesktopdata_DATA = data/profilesx-sp-plugin.desktop

sudoersdir = $(sysconfdir)/sudoers.d/
sudoers_DATA = ./data/profilesx.sudoers

iconssmalldir = /usr/share/icons/hicolor/18x18/hildon
iconssmall_DATA = data/statusarea_profilesx_home.png \
				  data/statusarea_profilesx_im.png \
				  data/statusarea_profilesx_loud.png \
				  data/statusarea_profilesx_outside.png

iconslargedir = /usr/share/icons/hicolor/48x48/hildon
iconslarge_DATA = data/profilesx_cp_setup.png
